# Distributed_Rendering

./: .gitignore  .gitmodules  CMakeLists.txt  GenerateSolution.bat  README.md  USAGE.md
ClusteredVoxelGI/: BufferManager.cpp  BufferManager.h  BuildAABBsTechnique.cpp  BuildAABBsTechnique.h  CMakeLists.txt  CVGIDataTypes.cpp  CVGIDataTypes.h  CameraController.cpp  CameraController.h  ClearBufferShader_CS.h  ClusterVisibility.cpp  ClusterVisibility.h  ClusterVoxels.cpp  ClusterVoxels.h  ClusteredVoxelGI.cpp  ClusteredVoxelGI.h  ComputeAABB_CS.h  ComputeNeighbour_CS.h  ComputeNeighboursTechnique.cpp  DisplayVoxelScene.cpp  DisplayVoxelScene.h  FaceCountTechnique.cpp  FaceCountTechnique.h  FacePenaltyTechnique.cpp  FacePenaltyTechnique.h  FacePenalty_CS.h  GIFromStreamScene.cpp  GIFromStreamScene.h  GaussianFilterTechnique.cpp  GaussianFilterTechnique.h  GaussianFilter_CS.h  HlslCompat.h  LerpRadianceTechnique.cpp  LerpRadianceTechnique.h  LerpRadiance_CS.h  LightTransportDepth_CS.h  LightTransportIndirect_CS.h  LightTransportTechnique.cpp  LightTransportTechnique.h  LightTransport_CS.h  (+30 more)
ClusteredVoxelGI/Data/: ShadersClearBufferShader_CS.cso  ShadersComputeNeighbour_CS.cso  ShadersFacePenalty_CS.cso  ShadersGaussianFilter_CS.cso  ShadersLerpRadiance_CS.cso  ShadersLightTransportDepth_CS.cso  ShadersLightTransportIndirect_CS.cso  ShadersLightTransport_CS.cso  ShadersLitVoxels_CS.cso  ShadersRaytracing.cso  ShadersRaytracingShadow.cso
ClusteredVoxelGI/Data/Shaders/: Basic_VS.cso  ClearBufferShader_CS.cso  ClearBufferShader_CS.h  ClusterReduce_CS.cso  ComputeAABB_CS.cso  ComputeAABB_CS.h  ComputeNeighbour_CS.cso  ComputeNeighbour_CS.h  FacePenalty_CS.cso  FastSlic_CS.cso  GaussianFilter_CS.cso  LerpRadiance_CS.cso  LightTransportDepth_CS.cso  LightTransportDepth_CS.h  LightTransportIndirect_CS.cso  LightTransportIndirect_CS.h  LightTransport_CS.cso  LightTransport_CS.h  LitVoxels_CS.cso  PrefixSum_CS.cso  Raytracing.cso  RaytracingShadow.cso  VoxelDisplay_GS.cso  VoxelDisplay_PS.cso  VoxelDisplay_VS.cso  Voxel_GS.cso  Voxel_PS.cso  Voxel_VS.cso
ClusteredVoxelGI/Helpers/: BufferManager.cpp  BufferManager.h  CVGIDataTypes.h  RayTracingHelpers.cpp  RayTracingHelpers.h
ClusteredVoxelGI/Shaders/: ClearBufferShader_CS.hlsl  ClusterReduce.hlsl  ClusterReduce_CS.hlsl  ComputeAABB_CS.hlsl  ComputeNeighbour_CS.hlsl  FaceCount_CS.hlsl  FacePenalty_CS.hlsl  FastSlic_CS.hlsl  GaussianFilter_CS.hlsl  LerpRadiance_CS.hlsl  LightTransportDepth_CS.hlsl  LightTransportIndirect_CS.hlsl  LightTransport_CS.hlsl  LitVoxels_CS.hlsl  PrefixSum_CS.hlsl  Raytracing.hlsl  RaytracingShadow.hlsl  TechniquesCompat.h  VoxelDisplay_GS.hlsl  VoxelDisplay_PS.hlsl  VoxelDisplay_VS.hlsl  VoxelUtils.hlsli  Voxel_GS.hlsl  Voxel_PS.hlsl  Voxel_VS.hlsl  VoxelizeScene_CS.hlsl
ClusteredVoxelGI/Techniques/: BuildAABBsTechnique.cpp  BuildAABBsTechnique.h  ClusterVisibility.cpp  ClusterVisibility.h  ClusterVoxels.cpp  ClusterVoxels.h  ComputeNeighboursTechnique.cpp  ComputeNeighboursTechnique.h  DisplayVoxelScene.cpp  DisplayVoxelScene.h  FacePenaltyTechnique.cpp  FacePenaltyTechnique.h  GaussianFilterTechnique.cpp  GaussianFilterTechnique.h  LerpRadianceTechnique.cpp  LerpRadianceTechnique.h  LightTransportTechnique.cpp  LightTransportTechnique.h  LightVoxel.cpp  LightVoxel.h  MergeClusters.cpp  PrefixSumVoxels.cpp  PrefixSumVoxels.h  SceneDepthTechnique.cpp  SceneDepthTechnique.h  Technique.cpp  Technique.h  VoxelizeScene.cpp  VoxelizeScene.h
DirectXLib/: CMakeLists.txt
DirectXLib/DX12Lib/: Adapter.cpp  Adapter.h  CIDXGIFactory.cpp  CIDXGIFactory.h  Camera.cpp  Camera.h  Color.cpp  Color.h  ColorBuffer.cpp  ColorBuffer.h  CommandAllocator.cpp  CommandAllocator.h  CommandContext.cpp  CommandContext.h  CommandList.cpp  CommandList.h  CommandQueue.cpp  CommandQueue.h  CommonConstants.cpp  CommonConstants.h  D3DApp.cpp  D3DApp.h  DX12Window.cpp  DX12Window.h  DepthBuffer.cpp  DepthBuffer.h  Descriptor.h  DescriptorHeap.cpp  DescriptorHeap.h  Device.cpp  Device.h  Fence.cpp  Fence.h  FrameResource.cpp  FrameResource.h  GameTime.cpp  GameTime.h  GeometryGenerator.cpp  GeometryGenerator.h  GraphicsCore.cpp  (+35 more)
DirectXLib/DX12Lib/Commons/: Camera.cpp  Camera.h  CommandContext.cpp  CommandContext.h  CommonConstants.cpp  CommonConstants.h  D3DApp.cpp  D3DApp.h  DX12Window.cpp  GameTime.cpp  GameTime.h  GraphicsCore.cpp  GraphicsCore.h  Helpers.cpp  Helpers.h  Logger.cpp  Logger.h  MathHelper.cpp  MathHelper.h  NetworkManager.cpp  NetworkManager.h  Renderer.cpp  Renderer.h  ShadowMap.cpp  ShadowMap.h
DirectXLib/DX12Lib/DXWrapper/: Adapter.cpp  CIDXGIFactory.cpp  Color.cpp  Color.h  ColorBuffer.cpp  ColorBuffer.h  CommandAllocator.cpp  CommandAllocator.h  CommandList.cpp  CommandList.h  CommandQueue.cpp  CommandQueue.h  DepthBuffer.cpp  DepthBuffer.h  DescriptorHeap.cpp  DescriptorHeap.h  Device.cpp  Device.h  Fence.cpp  GPUBuffer.cpp  GPUBuffer.h  PipelineState.cpp  PipelineState.h  PixelBuffer.cpp  PixelBuffer.h  QueryHeap.cpp  QueryHeap.h  Resource.cpp  Resource.h  RootSignature.cpp  RootSignature.h  SamplerDesc.cpp  SamplerDesc.h  Shader.cpp  Shader.h  Swapchain.cpp  Swapchain.h  Texture.cpp  Texture.h  UploadBuffer.cpp  (+1 more)
DirectXLib/DX12Lib/Encoder/: FFmpegStreamer.cpp  FFmpegStreamer.h  NVEncoder.cpp  NVEncoder.h
DirectXLib/DX12Lib/Models/: Material.cpp  Material.h  MaterialManager.cpp  (+7 more)
DirectXLib/directx/: d3d12.h  d3d12.idl  d3d12shader.h
LocalIllumination/: CMakeLists.txt  CameraController.cpp  CameraController.h  FrameResource.h  LIScene.cpp  LIScene.h  LIUtils.cpp  LIUtils.h  LocalIllumination.cpp  LocalIllumination.h  README.md  RadianceFromNetworkTechnique.cpp  RadianceFromNetworkTechnique.h  main.cpp
LocalIllumination/Shaders/: Basic.hlsl  Basic_PS.hlsl  Basic_VS.hlsl  Common.hlsli  Default.hlsli  GaussianOnly_CS.hlsl  LightingUtil.hlsli  RadianceFromNetwork_CS.hlsl
StreamingClient/: CMakeLists.txt  FFmpegDemuxer.cpp  FFmpegDemuxer.h  Helpers.cpp  Helpers.h  NVDecoder.cpp  NVDecoder.h  README.md  StreamRenderer.cpp  StreamRenderer.h  main.cpp
StreamingClient/Shaders/: BasicFragment.fs  BasicVertex.vs
(+332 files in other folders)
